@@ -18,6 +18,7 @@ Allow F-keys to assign extra info for actions (like window name on openwindow ac
 Added XEyes "Toy" to follow mouse
 Added more Hotswap combinations
 Added command line setting --machinelist to get machines list names whitespace separated
+Added Sierpinsky Meter Type to View Sensors
 
 * Improvements:
 
